fix: get rid of flickering when deleting history

--- a/src/pages/Favorites/Favorites.module.scss
+++ b/src/pages/Favorites/Favorites.module.scss
@@ -15,7 +15,7 @@
     color: $font-main;
     text-align: center;
     margin-top: 0;
-    margin-bottom: 30px;
+    margin-bottom: 55px;
     font-size: 20px;
     font-weight: 600;
   }
